grammar/grammar.ebnf
(* grammar.ebnf *)
(* Pure functional expression-based language grammar *)

program       = expression ;

expression    = let_expr
              | if_expr
              | lambda
              | comparison ;

let_expr      = "let" , identifier , "=" , expression , "in" , expression ;
if_expr       = "if" , expression , "then" , expression , "else" , expression ;
lambda        = "\\" , identifier , "->" , expression ;

comparison    = arithmetic , [ ("==" | "<" | ">") , arithmetic ] ;
arithmetic    = application , { ("+" | "-" | "*" | "/") , application } ;
application   = term , { term } ;

term          = identifier
              | number
              | "(" , expression , ")" ;

identifier    = letter , { letter | digit } ;
number        = digit , { digit } , [ "." , digit , { digit } ] ;
letter        = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j"
              | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t"
              | "u" | "v" | "w" | "x" | "y" | "z"
              | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J"
              | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T"
              | "U" | "V" | "W" | "X" | "Y" | "Z" ;
digit         = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

(* Operator precedence (highest to lowest):
   1. Parentheses ()
   2. Function application (left associative)
   3. Arithmetic operators (*, /, +, -)
   4. Comparison operators (==, <, >)
   5. Lambda abstraction
   6. If-then-else
   7. Let-in *)
